<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add new task</string>
    <string name="radiobutton">RadioButton</string>
    <string name="insert_task">Insert Task</string>
    <string name="add_task">Add task</string>
    <string name="todo_list">NOTTY</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note">Delete Note</string>
    <string name="hint">Insert the note title here</string>
    <string name="insert_the_description_here">Insert the description here</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add note</string>
    <string name="date">Day Month, Hour</string>
    <string name="title">Title</string>
    <string name="body">Body Text ...</string>
    <string name="delete_button">Delete Button</string>
    <string name="back_button">Back Button</string>
    <string name="task_title">Task Example</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="save_button">Save Button</string>
    <string name="edit_title_hint">Title</string>
    <string name="edit_body_hint">Insert text here...</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Logout"</string>
</resources>