<?xml version="1.0" encoding="utf-8"?>

<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.todo.view.NoteViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/cancel_button"
            android:src="@android:drawable/btn_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/save_button"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/edit_title_hint"
                android:hint="@string/edit_title_hint"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@={viewModel.title}"/>

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/edit_title_hint"
                android:hint="@string/edit_title_hint"
                android:inputType="datetime"
                android:text="@={viewModel.date}"/>

            <EditText
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="edit_body_hint"
                android:hint="@string/edit_body_hint"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@={viewModel.body}"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>