<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:visibility="visible"
        tools:visibility="visible">

    <data>

        <variable
                name="viewModel"
                type="com.example.todo.view.NoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LandingFragment"
            android:layout_margin="10dp">

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:text="@string/todo_list"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/note_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingAddBtn"
                android:layout_width="wrap_content"
                android:layout_height="341dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:contentDescription="@string/add_new_task"
                android:src="@android:drawable/ic_input_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
                android:id="@+id/addBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="204dp"
                android:background="@color/gray"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/note_list"
                tools:visibility="gone"
                android:padding="10dp">

            <EditText
                    android:id="@+id/newText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:text="@={viewModel.title}"
                    android:hint="@string/insert_task"
                    android:inputType="text" />

            <Button
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_task" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
